src/parser.output
State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier ID SEMI
    7                | type_specifier ID LBRACKET NUM RBRACKET SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier ID LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier ID
   16      | type_specifier ID LBRACKET RBRACKET

   17 compound_stmt: LBRACE local_declarations statement_list RBRACE

   18 local_declarations: local_declarations var_declaration
   19                   | /* empty */

   20 statement_list: statement_list statement
   21               | /* empty */

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression SEMI
   28                | SEMI

   29 selection_stmt: IF LPAREN expression RPAREN statement
   30               | IF LPAREN expression RPAREN statement ELSE statement

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMI
   33            | RETURN expression SEMI

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: ID
   37    | ID LBRACKET expression RBRACKET

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 relop: LTE
   41      | LT
   42      | GT
   43      | GTE
   44      | EQ
   45      | NEQ

   46 additive_expression: additive_expression addop term
   47                    | term

   48 addop: PLUS
   49      | MINUS

   50 term: term mulop factor
   51     | factor

   52 mulop: TIMES
   53      | DIVIDE

   54 factor: LPAREN expression RPAREN
   55       | var
   56       | call
   57       | NUM

   58 call: ID LPAREN args RPAREN

   59 args: arg_list
   60     | /* empty */

   61 arg_list: arg_list COMMA expression
   62         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 7 57
ID (259) 6 7 10 15 16 36 37 58
IF (260) 29 30
ELSE (261) 30
INT (262) 8
RETURN (263) 32 33
VOID (264) 9 12
WHILE (265) 31
PLUS (266) 48
MINUS (267) 49
TIMES (268) 52
DIVIDE (269) 53
LT (270) 41
LTE (271) 40
GT (272) 42
GTE (273) 43
EQ (274) 44
NEQ (275) 45
ASSIGN (276) 34
SEMI (277) 6 7 27 28 32 33
COMMA (278) 13 61
LPAREN (279) 10 29 30 31 54 58
RPAREN (280) 10 29 30 31 54 58
LBRACKET (281) 7 16 37
RBRACKET (282) 7 16 37
LBRACE (283) 17
RBRACE (284) 17


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1, on right: 0
declaration_list (32)
    on left: 2 3, on right: 1 2
declaration (33)
    on left: 4 5, on right: 2 3
var_declaration (34)
    on left: 6 7, on right: 4 18
type_specifier (35)
    on left: 8 9, on right: 6 7 10 15 16
fun_declaration (36)
    on left: 10, on right: 5
params (37)
    on left: 11 12, on right: 10
param_list (38)
    on left: 13 14, on right: 11 13
param (39)
    on left: 15 16, on right: 13 14
compound_stmt (40)
    on left: 17, on right: 10 23
local_declarations (41)
    on left: 18 19, on right: 17 18
statement_list (42)
    on left: 20 21, on right: 17 20
statement (43)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expression_stmt (44)
    on left: 27 28, on right: 22
selection_stmt (45)
    on left: 29 30, on right: 24
iteration_stmt (46)
    on left: 31, on right: 25
return_stmt (47)
    on left: 32 33, on right: 26
expression (48)
    on left: 34 35, on right: 27 29 30 31 33 34 37 54 61 62
var (49)
    on left: 36 37, on right: 34 55
simple_expression (50)
    on left: 38 39, on right: 35
relop (51)
    on left: 40 41 42 43 44 45, on right: 38
additive_expression (52)
    on left: 46 47, on right: 38 39 46
addop (53)
    on left: 48 49, on right: 46
term (54)
    on left: 50 51, on right: 46 47 50
mulop (55)
    on left: 52 53, on right: 50
factor (56)
    on left: 54 55 56 57, on right: 50 51
call (57)
    on left: 58, on right: 56
args (58)
    on left: 59 60, on right: 58
arg_list (59)
    on left: 61 62, on right: 59 61


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


state 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


state 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    6 var_declaration: type_specifier . ID SEMI
    7                | type_specifier . ID LBRACKET NUM RBRACKET SEMI
   10 fun_declaration: type_specifier . ID LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11


state 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 11

    6 var_declaration: type_specifier ID . SEMI
    7                | type_specifier ID . LBRACKET NUM RBRACKET SEMI
   10 fun_declaration: type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMI      shift, and go to state 12
    LPAREN    shift, and go to state 13
    LBRACKET  shift, and go to state 14


state 12

    6 var_declaration: type_specifier ID SEMI .

    $default  reduce using rule 6 (var_declaration)


state 13

   10 fun_declaration: type_specifier ID LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    type_specifier  go to state 16
    params          go to state 17
    param_list      go to state 18
    param           go to state 19


state 14

    7 var_declaration: type_specifier ID LBRACKET . NUM RBRACKET SEMI

    NUM  shift, and go to state 20


state 15

    9 type_specifier: VOID .
   12 params: VOID .

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


state 16

   15 param: type_specifier . ID
   16      | type_specifier . ID LBRACKET RBRACKET

    ID  shift, and go to state 21


state 17

   10 fun_declaration: type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 22


state 18

   11 params: param_list .
   13 param_list: param_list . COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


state 19

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


state 20

    7 var_declaration: type_specifier ID LBRACKET NUM . RBRACKET SEMI

    RBRACKET  shift, and go to state 24


state 21

   15 param: type_specifier ID .
   16      | type_specifier ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 15 (param)


state 22

   10 fun_declaration: type_specifier ID LPAREN params RPAREN . compound_stmt

    LBRACE  shift, and go to state 26

    compound_stmt  go to state 27


state 23

   13 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 16
    param           go to state 28


state 24

    7 var_declaration: type_specifier ID LBRACKET NUM RBRACKET . SEMI

    SEMI  shift, and go to state 29


state 25

   16 param: type_specifier ID LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 30


state 26

   17 compound_stmt: LBRACE . local_declarations statement_list RBRACE

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 31


state 27

   10 fun_declaration: type_specifier ID LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


state 28

   13 param_list: param_list COMMA param .

    $default  reduce using rule 13 (param_list)


state 29

    7 var_declaration: type_specifier ID LBRACKET NUM RBRACKET SEMI .

    $default  reduce using rule 7 (var_declaration)


state 30

   16 param: type_specifier ID LBRACKET RBRACKET .

    $default  reduce using rule 16 (param)


state 31

   17 compound_stmt: LBRACE local_declarations . statement_list RBRACE
   18 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 32
    type_specifier   go to state 33
    statement_list   go to state 34


state 32

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


state 33

    6 var_declaration: type_specifier . ID SEMI
    7                | type_specifier . ID LBRACKET NUM RBRACKET SEMI

    ID  shift, and go to state 35


state 34

   17 compound_stmt: LBRACE local_declarations statement_list . RBRACE
   20 statement_list: statement_list . statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 26
    RBRACE  shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 35

    6 var_declaration: type_specifier ID . SEMI
    7                | type_specifier ID . LBRACKET NUM RBRACKET SEMI

    SEMI      shift, and go to state 12
    LBRACKET  shift, and go to state 14


state 36

   57 factor: NUM .

    $default  reduce using rule 57 (factor)


state 37

   36 var: ID .
   37    | ID . LBRACKET expression RBRACKET
   58 call: ID . LPAREN args RPAREN

    LPAREN    shift, and go to state 57
    LBRACKET  shift, and go to state 58

    $default  reduce using rule 36 (var)


state 38

   29 selection_stmt: IF . LPAREN expression RPAREN statement
   30               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 59


state 39

   32 return_stmt: RETURN . SEMI
   33            | RETURN . expression SEMI

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    SEMI    shift, and go to state 60
    LPAREN  shift, and go to state 42

    expression           go to state 61
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 40

   31 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


state 41

   28 expression_stmt: SEMI .

    $default  reduce using rule 28 (expression_stmt)


state 42

   54 factor: LPAREN . expression RPAREN

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 63
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 43

   17 compound_stmt: LBRACE local_declarations statement_list RBRACE .

    $default  reduce using rule 17 (compound_stmt)


state 44

   23 statement: compound_stmt .

    $default  reduce using rule 23 (statement)


state 45

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


state 46

   22 statement: expression_stmt .

    $default  reduce using rule 22 (statement)


state 47

   24 statement: selection_stmt .

    $default  reduce using rule 24 (statement)


state 48

   25 statement: iteration_stmt .

    $default  reduce using rule 25 (statement)


state 49

   26 statement: return_stmt .

    $default  reduce using rule 26 (statement)


state 50

   27 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 64


state 51

   34 expression: var . ASSIGN expression
   55 factor: var .

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 55 (factor)


state 52

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


state 53

   38 simple_expression: additive_expression . relop additive_expression
   39                  | additive_expression .
   46 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67
    LT     shift, and go to state 68
    LTE    shift, and go to state 69
    GT     shift, and go to state 70
    GTE    shift, and go to state 71
    EQ     shift, and go to state 72
    NEQ    shift, and go to state 73

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 74
    addop  go to state 75


state 54

   47 additive_expression: term .
   50 term: term . mulop factor

    TIMES   shift, and go to state 76
    DIVIDE  shift, and go to state 77

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 78


state 55

   51 term: factor .

    $default  reduce using rule 51 (term)


state 56

   56 factor: call .

    $default  reduce using rule 56 (factor)


state 57

   58 call: ID LPAREN . args RPAREN

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    $default  reduce using rule 60 (args)

    expression           go to state 79
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    args                 go to state 80
    arg_list             go to state 81


state 58

   37 var: ID LBRACKET . expression RBRACKET

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 82
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 59

   29 selection_stmt: IF LPAREN . expression RPAREN statement
   30               | IF LPAREN . expression RPAREN statement ELSE statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 83
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 60

   32 return_stmt: RETURN SEMI .

    $default  reduce using rule 32 (return_stmt)


state 61

   33 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 84


state 62

   31 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 85
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 63

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 86


state 64

   27 expression_stmt: expression SEMI .

    $default  reduce using rule 27 (expression_stmt)


state 65

   34 expression: var ASSIGN . expression

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 87
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 66

   48 addop: PLUS .

    $default  reduce using rule 48 (addop)


state 67

   49 addop: MINUS .

    $default  reduce using rule 49 (addop)


state 68

   41 relop: LT .

    $default  reduce using rule 41 (relop)


state 69

   40 relop: LTE .

    $default  reduce using rule 40 (relop)


state 70

   42 relop: GT .

    $default  reduce using rule 42 (relop)


state 71

   43 relop: GTE .

    $default  reduce using rule 43 (relop)


state 72

   44 relop: EQ .

    $default  reduce using rule 44 (relop)


state 73

   45 relop: NEQ .

    $default  reduce using rule 45 (relop)


state 74

   38 simple_expression: additive_expression relop . additive_expression

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 75

   46 additive_expression: additive_expression addop . term

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    var     go to state 88
    term    go to state 90
    factor  go to state 55
    call    go to state 56


state 76

   52 mulop: TIMES .

    $default  reduce using rule 52 (mulop)


state 77

   53 mulop: DIVIDE .

    $default  reduce using rule 53 (mulop)


state 78

   50 term: term mulop . factor

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    var     go to state 88
    factor  go to state 91
    call    go to state 56


state 79

   62 arg_list: expression .

    $default  reduce using rule 62 (arg_list)


state 80

   58 call: ID LPAREN args . RPAREN

    RPAREN  shift, and go to state 92


state 81

   59 args: arg_list .
   61 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 93

    $default  reduce using rule 59 (args)


state 82

   37 var: ID LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 94


state 83

   29 selection_stmt: IF LPAREN expression . RPAREN statement
   30               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 95


state 84

   33 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 33 (return_stmt)


state 85

   31 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 96


state 86

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


state 87

   34 expression: var ASSIGN expression .

    $default  reduce using rule 34 (expression)


state 88

   55 factor: var .

    $default  reduce using rule 55 (factor)


state 89

   38 simple_expression: additive_expression relop additive_expression .
   46 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 75


state 90

   46 additive_expression: additive_expression addop term .
   50 term: term . mulop factor

    TIMES   shift, and go to state 76
    DIVIDE  shift, and go to state 77

    $default  reduce using rule 46 (additive_expression)

    mulop  go to state 78


state 91

   50 term: term mulop factor .

    $default  reduce using rule 50 (term)


state 92

   58 call: ID LPAREN args RPAREN .

    $default  reduce using rule 58 (call)


state 93

   61 arg_list: arg_list COMMA . expression

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    LPAREN  shift, and go to state 42

    expression           go to state 97
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 94

   37 var: ID LBRACKET expression RBRACKET .

    $default  reduce using rule 37 (var)


state 95

   29 selection_stmt: IF LPAREN expression RPAREN . statement
   30               | IF LPAREN expression RPAREN . statement ELSE statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 26

    compound_stmt        go to state 44
    statement            go to state 98
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 96

   31 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 26

    compound_stmt        go to state 44
    statement            go to state 99
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 97

   61 arg_list: arg_list COMMA expression .

    $default  reduce using rule 61 (arg_list)


state 98

   29 selection_stmt: IF LPAREN expression RPAREN statement .
   30               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 100

    ELSE      [reduce using rule 29 (selection_stmt)]
    $default  reduce using rule 29 (selection_stmt)


state 99

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (iteration_stmt)


state 100

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    NUM     shift, and go to state 36
    ID      shift, and go to state 37
    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 26

    compound_stmt        go to state 44
    statement            go to state 101
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


state 101

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 30 (selection_stmt)
